# os-string-aeson

./: .gitignore  .mergify.yml  ChangeLog.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  fourmolu.yaml  hie.yaml  os-string-aeson.cabal  stack.ghc-9.2+old.yaml  stack.ghc-9.2.yaml  stack.ghc-9.4+old.yaml  stack.ghc-9.4.yaml  stack.ghc-9.6+old.yaml  stack.ghc-9.6.yaml  stack.yaml
.github/workflows/: doctest.action.yml  haskell-ci.yml  linters.yml  main.yml
.github/workflows/doctest/: action.yml
examples/: Functions.hs  HKD1.hs  HKD2.hs  Main.hs  Utils.hs
os-string-aeson-internal/System/OsString/Aeson/: Internal.hs  Types.hs
os-string-aeson-internal/System/OsString/Aeson/Internal/: Include.hs  Types.hs  Windows.hs
src/System/OsString/: Aeson.hs
src/System/OsString/Aeson/: Include.hs  Posix.hs  Windows.hs
stack/: stack.ghc-9.2+os-string.yaml  stack.ghc-9.2.yaml  stack.ghc-9.4+os-string.yaml  stack.ghc-9.4.yaml  stack.ghc-9.6+os-string.yaml  stack.ghc-9.6.yaml  test-stack.sh
test/: Include.hs  Main.hs  Windows.hs
test/Properties/: Include.hs  Posix.hs
test/Units/: Include.hs  Posix.hs  Windows.hs
