cabal-version: 3.0
name: os-string-aeson
version: 1.0.0
synopsis: Aeson instances for the os-string package
description:
  Please see the README on Github at <https://github.com/mmhat/os-string-aeson#readme>

category: JSON
homepage: https://github.com/mmhat/os-string-aeson#readme
bug-reports: https://github.com/mmhat/os-string-aeson/issues
author: Dominik Peteler
maintainer: hackage+os-string-aeson@with-h.at
copyright: 2024 Dominik Peteler
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
-- cabal-gild: discover --include=**/Include.hs
extra-source-files:
  src/System/OsString/Aeson/Include.hs
  test/Include.hs

-- cabal-gild: discover --include=LICENSE --include=**/*.md
extra-doc-files:
  ChangeLog.md
  LICENSE
  README.md

tested-with:
  ghc ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

common language
  default-extensions:
    CPP
    ImportQualifiedPost

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-language: Haskell2010

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: language
  hs-source-dirs: src/
  build-depends:
    aeson >=1.0.0.0 && <2.3,
    base >=4.14 && <4.21,
    exceptions >=0.4 && <0.11,
    os-string >=2.0.0 && <2.1,
    os-string-aeson-internal,
    text >=0.1 && <2.2,

  -- cabal-gild: discover ./src/ --exclude=**/Include.hs
  exposed-modules:
    System.OsString.Aeson
    System.OsString.Aeson.Posix
    System.OsString.Aeson.Windows

library os-string-aeson-internal
  import: language
  visibility: public
  hs-source-dirs: os-string-aeson-internal/
  build-depends: base >=4.14 && <4.21
  -- cabal-gild: discover ./os-string-aeson-internal/
  exposed-modules:
    System.OsString.Aeson.Types

test-suite test
  import: language
  import: rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    deepseq,
    hedgehog,
    os-string,
    os-string-aeson,
    tasty,
    tasty-hedgehog,
    tasty-hunit,
    tasty-rerun,

  -- cabal-gild: discover ./test/ --exclude=test/Main.hs --exclude=**/Include.hs
  other-modules:
    Posix
    Windows

source-repository head
  type: git
  location: https://github.com/mmhat/os-string-aeson
