cabal-version: 3.0
name: os-string-aeson
version: 1.0.0
synopsis: Aeson instances for the os-string package
description:
  Please see the README on Github at <https://github.com/mmhat/os-string-aeson#readme>

category: JSON
homepage: https://github.com/mmhat/os-string-aeson#readme
bug-reports: https://github.com/mmhat/os-string-aeson/issues
author: Dominik Peteler
maintainer: hackage+os-string-aeson@with-h.at
copyright: 2024 Dominik Peteler
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
-- cabal-gild: discover --include=**/Include.hs
extra-source-files:
  os-string-aeson-internal/System/OsString/Aeson/Internal/Include.hs
  src/System/OsString/Aeson/Include.hs
  test/Properties/Include.hs
  test/Units/Include.hs

-- cabal-gild: discover --include=LICENSE --include=*.md
extra-doc-files:
  ChangeLog.md
  LICENSE
  README.md

tested-with:
  ghc ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.2 || ==9.10.1

flag old-os-string
  description: Use an older version of the os-string library.
  manual: False
  default: False

common language
  default-extensions:
    CPP
    ImportQualifiedPost

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-language: Haskell2010

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: language
  hs-source-dirs: src/
  build-depends:
    base,
    os-string-aeson-internal,

  -- cabal-gild: discover ./src/ --exclude=Setup.hs --exclude=**/Include.hs
  exposed-modules:
    System.OsString.Aeson
    System.OsString.Aeson.Posix
    System.OsString.Aeson.Windows

library os-string-aeson-internal
  import: language
  visibility: public
  hs-source-dirs: os-string-aeson-internal/
  build-depends:
    aeson >=1.0.0.0 && <2.3,
    base >=4.14 && <4.21,
    base64 >=1.0 && <1.1,
    bytestring >=0.10.4.0 && <0.13,
    exceptions >=0.4 && <0.11,
    text >=0.1 && <2.2,
    text-short >=0.1 && <0.2,

  -- cabal-gild: discover ./os-string-aeson-internal/ --exclude=Setup.hs --exclude=**/Include.hs
  exposed-modules:
    System.OsString.Aeson.Internal
    System.OsString.Aeson.Internal.Posix
    System.OsString.Aeson.Internal.Types
    System.OsString.Aeson.Internal.Windows

  if flag(old-os-string)
    build-depends:
      filepath >=1.4.100.0 && <1.5,
      os-string <2,

    ghc-options: -Wno-deprecations
  else
    build-depends:
      os-string >=2.0.0 && <2.1

test-suite examples
  import: language
  import: rts
  type: exitcode-stdio-1.0
  hs-source-dirs: examples
  main-is: Main.hs
  build-depends:
    aeson,
    aeson-pretty,
    base,
    bytestring,
    os-string-aeson,

  -- cabal-gild: discover ./examples/ --exclude=Setup.hs --exclude=examples/Main.hs
  other-modules:
    Functions
    HKD1
    HKD2
    Utils

  if flag(old-os-string)
    build-depends:
      filepath >=1.4.100.0 && <1.5,
      os-string <2,

    ghc-options: -Wno-deprecations
  else
    build-depends:
      os-string >=2.0.0 && <2.1

test-suite test
  import: language
  import: rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    exceptions,
    hedgehog >=1.1 && <1.5,
    os-string-aeson,
    tasty >=1.4 && <1.6,
    tasty-hedgehog >=1.3 && <1.5,
    tasty-hunit >=0.10 && <0.11,
    tasty-rerun >=1.1 && <1.2,
    text,

  -- cabal-gild: discover ./test/ --exclude=Setup.hs --exclude=test/Main.hs --exclude=**/Include.hs
  other-modules:
    Properties.Posix
    Properties.Windows
    Units.Posix
    Units.Windows

  if flag(old-os-string)
    build-depends:
      filepath >=1.4.100.0 && <1.5,
      os-string <2,

    ghc-options: -Wno-deprecations
  else
    build-depends:
      os-string >=2.0.0 && <2.1

source-repository head
  type: git
  location: https://github.com/mmhat/os-string-aeson
